# 590_project

./: .env.example  .gitignore  README.md  pyproject.toml  rerun_joint.py
data/: cleaned_orders.csv  default_config.json  problem_description.txt
docs/: CFA_Step3_Prediction (1).ipynb  agent-design.md
docs/superpowers/plans/: 2026-06-03-intake-data-ingestion.md  2026-06-03-web-ui.md
docs/superpowers/specs/: 2026-06-03-intake-data-ingestion-design.md  (+1 more)
outputs/: all_optimizer_order_plans.csv  optimizer_comparison.csv
presentation/: presentation.aux  presentation.tex
proposal/: proposal.tex
report/: final_notebook.ipynb  final_report.tex  joint_comparison_40k.csv  rerun_results.json
scripts/: clean_data.py
src/: __init__.py  __main__.py  cli.py  orchestrator.py
src/data_ingestion/: __init__.py  agent.py  prompts.py  sandbox.py  tools.py
src/explanation/: __init__.py  agent.py  baseline.py  prompts.py  sensitivity.py
src/intake/: __init__.py  agent.py  prompts.py  tools.py
src/modeling/: agent.py  prompts.py
src/models/: CFA_Steps123.ipynb  __init__.py  all_optimizers_combined_final.py  cfa_optimizer.ipynb  data_module.py  joint_optimizer.py  optimization_result.py  prediction_module.py  problem_config.py  templates.py
src/optimization_model_output/: best_optimizer_order_plan.csv
src/web/: __init__.py  app.py
tests/: test_data_ingestion_tools.py  test_explanation.py  test_intake_tools.py  test_joint_optimizer.py  test_orchestrator.py  test_problem_config.py  test_sandbox.py  test_web_app.py
tests/fixtures/: sample_orders.csv
(+5 files in other folders)
