[project]
name = "cfa-optimization-agent"
version = "0.1.0"
description = "AI-powered optimization agent for uniform ordering"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk",
    "pydantic>=2.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
cfa-agent = "src.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
